# oferta

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  a.py  alembic.ini  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_offer_approvals.py
app/: globals.css  layout.tsx  main.py  page.tsx
app/admin/: layout.tsx  page.tsx
app/affiliates/: base.py  csv_provider.py  database_provider.py
app/api/: dependencies.py  routes_admin.py  routes_channels.py  routes_health.py  routes_jobs.py  routes_products.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/database/: __init__.py  models.py  session.py
app/marketplaces/: base.py  registry.py
app/ofertas/: page.tsx
app/schemas/: configuration.py  niche.py  product.py  publication.py
app/services/: configuration_service.py  dashboard_service.py  discovery_service.py  env_service.py  niche_selector.py  offer_service.py  preview_service.py  product_mapper.py  product_service.py  publication_service.py  publish_now_service.py  reporting_service.py  (+3 more)
data/: affiliate_links.example.csv  niches.example.yml
docs/: ADMIN_PANEL.md  ARCHITECTURE.md  CONFIGURATION.md  TROUBLESHOOTING.md
lib/: demo-data.ts
scripts/: install_startup.ps1  run.ps1  run_once.ps1  run_worker.ps1  setup.ps1  test.ps1  uninstall_startup.ps1
tests/: conftest.py  test_approvals_reporting.py  test_formatter_affiliates_config.py  test_integration_flow.py  test_money_urls.py  test_offer_rules.py  test_reposting.py
(+50 files in other folders)
